# ark_of_minds

./: .gitmodules  README.md
crawl_deepseek/: .env.example  AGENTS.md  PRINCIPLES.md  README.md  RUN_GUIDE.md  project.md  pyproject.toml
crawl_deepseek/asset/: introduction_prompt.md
crawl_deepseek/output/: 2026年投资哪些有色金属ETF基金相对来说更有前景？.json  2026年金属有色可投资的有哪些ETF.json  受供需关系影响，近期哪些金属成为热点？对应哪些ETF？.json  固态电池技术突破，利好哪些有色金属ETF？.json  如何挑选优质的有色金属ETF基金？有哪些ETF产品可以选择？.json  定投有色金属ETF基金，选哪只比较好？.json  宽基有色金属ETF推荐.json  工业有色ETF产品线中，现阶段哪只更具投资价值？.json  工业有色ETF产品线中，近期哪只更具投资吸引力？.json  工业有色ETF年内涨了多少，现在还能追吗？.json  工业有色ETF最近哪个涨得好，求推荐？.json  工业有色板块近一周表现如何，有哪些值得关注的基金？.json  工业有色现在估值高不高，上车选哪只ETF？.json  工业有色行业最近涨幅怎么样，有没有对应的ETF推荐？.json  工业有色行业最近走势强劲，推荐几只相关的ETF基金产品？.json  工业有色行业近期表现如何，并推荐下有关基金.json  工业金属主题指数近期涨跌情况怎样，适配ETF有哪些？.json  工业金属领域当前行情怎样，现阶段基金如何筛选？.json  工业金属领域当前走势如何，现阶段基金如何筛选？.json  工业金属领域政策与价格双驱动下，哪些ETF值得布局？.json  工业金属领域热点轮动情况如何，哪些ETF可重点跟踪？.json  工业金属领域近期走势如何，适合配置哪些ETF产品？.json  工信部稳增长政策对有色金属行业有何影响，哪些ETF最受益？.json  市场上的有色金属基金分行业更推荐哪一类.json  想了解一下工业有色行业最近的表现，顺便推荐几只ETF基金？.json  想投工业有色，现在入场合适吗，买哪只基金好？.json  有色ETF种类多，现在选哪只更合适？.json  有色ETF种类挺多，现在选哪只更合适？.json  有色板块指数基金优选，近期重点关注哪些标的？.json  有色板块指数基金配置，现阶段首选哪几只？.json  有色板块最近风口在哪，投哪个ETF靠谱？.json  有色板块还能追吗，现在布局哪只基金好？.json  有色波动这么大，现在想投的话，哪只ETF相对稳？.json  有色热点天天变，现在追哪个方向，ETF买啥？.json  有色行业近期表现如何，并推荐下有关基金.json  有色行业领域近期走势如何，适合配置哪些ETF产品？.json  有色金属ETF和有色金属主题基金有哪些更值得投资？.json  有色金属ETF近期获资金大幅净流入，跟随布局还是观望？.json  有色金属主题基金当前哪些较优，请给予配置建议。.json  有色金属板块当前存在哪些投资主题，相关ETF如何优选？.json  (+28 more)
crawl_deepseek/src/: agent.py  login.py  main.py  tools.py
(+54 files in other folders)
